feat: Add initial Mockito unit tests for controllers
This commit introduces Mockito unit tests for several controllers as part of the effort to integrate unit testing across the application.

Steps I've taken so far:
1. Added Mockito (mockito-core and mockito-junit-jupiter version 5.12.0) as a test dependency in `RestaurantBere-api/pom.xml`.
2. Created placeholder test classes for all identified controllers in the `com.hampcode.restaurant_reservation.restaurantbereapi.api` package.
3. Implemented unit tests for the following controllers:
    - AdminController: Covered `getPayedReservations` and `changeRefoundStatus`.
    - AuthController: Covered `registerCustomer` and `login`.
    - CustomerController: Covered `getAllCustomers` and `getCustomerById` (both found and not found scenarios).
    - DishController: Covered `getAllDishes`, `getDishById` (found and not found), `createDish` (success and error cases), `updateDish`, `deleteDish`, and `goImage` (various content types and error).
    - DrinkController: Covered `getAllDrinks`, `getDrinkById`, `createDrink` (success and error), `updateDrink`, `deleteDrink`, and `goImage` (various content types and error).
    - IzipayController: Implemented tests for core scenarios: successful payment order creation and handling of the payment success callback.

Work remaining:
- Unit tests for MailController, PaypalController, PdfController, ResTableController, ResenaController, ReservationController, UserProfileController, and ValidationController still need to be written.
- Some controllers, like IzipayController, had complex logic, and the initial tests cover only the most critical paths. More detailed tests might be needed. I encountered some difficulties in formulating the approach for IzipayController due to its multiple dependencies and complex interaction flows, particularly with external services and chained calls. The final successful approach for IzipayController was a simplified version focusing on core functionality.